# iflow-bot

./: CHANGELOG.md  Dockerfile  README.md  README_CN.md  docker_entrypoint.py  pyproject.toml
iflow_bot/channels/: discord.py  qq.py
iflow_bot/cli/: commands.py  iflow_passthrough.py
iflow_bot/config/: loader.py  schema.py
iflow_bot/engine/: acp.py  adapter.py  loop.py  stdio_acp.py
iflow_bot/utils/: helpers.py
iflow_bot/web/: server.py
iflow_bot/web/static/: app.js
iflow_bot/web/templates/: base.html  mcp.html
scripts/: mcp_proxy.py  start_mcp_proxy.sh  stop_mcp_proxy.sh  test_mcp_proxy.py  test_mcp_proxy.sh
