[project]
name = "iflow-bot"
version = "0.3.4"
description = "Multi-channel AI Assistant powered by iflow CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "iFlow Team" }
]
keywords = ["ai", "assistant", "chatbot", "telegram", "discord", "slack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-telegram-bot>=20.0",
    "discord.py>=2.3.0",
    "slack-sdk>=3.21.0",
    "lark-oapi>=1.0.0",
    "dingtalk-stream>=0.24.0",
    "qq-botpy>=1.2.1",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "loguru>=0.7.0",
    "prompt-toolkit>=3.0.0",
    "croniter>=6.0.0",
    "python-socks[asyncio]>=2.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
qq = ["qq-botpy>=1.0.0"]
all = ["iflow-bot[dev,qq]"]

[project.scripts]
iflow-bot = "iflow_bot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iflow_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
